crates/nargo_cli/tests/compile_tests_data/fail/if-without-block.nr
fn main() {
    let n = 1;
    if 5 == {
        println!("five");
    }
}
